# md-drop

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
appscript/: Code.gs  Form.html  appsscript.json  deploy.sh
docs/: index.html
src/md_drop/: config.py  formatter.py  note.py  sync.py  writer.py
src/md_drop/sources/: gmail.py  sheet.py
tests/: test_config.py  test_formatter.py  test_gmail.py  test_sync.py  test_writer.py
